# algorithms

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cc  main.py  setup.py
algorithms/: CMakeLists.txt
algorithms/config/cpp/: config.hpp.in
algorithms/core/python/algorithms/: __init__.py
algorithms/core/python/algorithms/search/: __init__.py  depth_first.py
algorithms/core/python/algorithms/sort/: __init__.py  merge.py
algorithms/core/python/ds/: graph.py  stack.py  trie.py
algorithms/core/python/ds/contrib/: ds_binary_tree.py  ds_linked_list.py  ds_list.py  ds_matrix.py
algorithms/include/: algorithms.hpp  algorithms_pch.cpp  algorithms_pch.hpp
algorithms/include/algorithms/: algorithms.hpp  config.hpp  core.hpp  ds.h  ds.hpp
algorithms/include/hazel/: config.hpp
algorithms/src/algorithms/: algorithms.cc  ds.cc
algorithms/src/examples/: balance-parens.cc  checkmate.cc  coins.cc  largest-square.cc  lonely-integer.cc  main.cc
apis/c_cpp/: CMakeLists.txt  functions.c  functions.h
apis/c_cpp/include/: algorithms.h  functions.h
apis/c_cpp/src/: algorithms.cc  functions.cc  main.cc
apis/cython/: algorithms.c  algorithms.cpp  algorithms.pyx
apis/python/: ds_array.py  ds_linked_list.py  ds_list.py  ds_matrix.py  ds_nodes.py
include/: config.h
include/Core/: Algorithms.h  DataStructures.h
lib/: CMakeLists.txt
lib/Core/: Algorithms.cc  DataStructures.cc
lib/Python/: ds_array.py  ds_binary_tree.py  ds_graph.py  ds_linked_list.py  ds_nodes.py  ds_stack.py
lib/Python/algorithms/: __init__.py
lib/Python/algorithms/search/: breadth_first.py  depth_first.py
lib/Python/algorithms/sort/: bubble.py  merge.py
lib/Python/algorithms/utils/: backtrack.py
lib/Python/ds/: __init__.py  graph.py  linkedlist.py  node.py  queue.py  stack.py  tree.py  trie.py
libs/Python/: ds_array.py  ds_matrix.py  ds_nodes.py
scripts/: build.sh  clean.sh  cpp.sh
src/: main.cc
src/challenges/: array-manipulation.cc  checkmate.cc  find-cycle-in-array.cc  largest-square.cc  lonely-integer.cc
